# yumi

./: README.md
jupyter-notebooks/: RWS_pos_control.ipynb  YuMi ROS-Gazebo.ipynb  test_joint_trajectory_msgs.ipynb
yumi_COBHOOK_controllers/: CMakeLists.txt
yumi_COBHOOK_controllers/include/: .yumi_test_controllers.h.swp  pose_MPC.h  yumi_test_controllers.h
yumi_COBHOOK_controllers/src/: .test_pos_control.cpp.swp  pose_MPC.cpp  sensor_calibration.cpp  test_IK_control.cpp  test_IK_control_MPC_pose.cpp  test_pos_control.cpp  test_traj_vel_control.cpp  test_vel_control.cpp  yumi_ROS_IK.cpp  yumi_test_controllers.cpp
